# ifcopenshell-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_boost_cpp1.72.0python3.6.____73_pypy.yaml  linux_64_boost_cpp1.72.0python3.6.____cpython.yaml  linux_64_boost_cpp1.72.0python3.7.____cpython.yaml  linux_64_boost_cpp1.72.0python3.8.____cpython.yaml  linux_64_boost_cpp1.72.0python3.9.____cpython.yaml  linux_64_boost_cpp1.74.0python3.6.____73_pypy.yaml  linux_64_boost_cpp1.74.0python3.6.____cpython.yaml  linux_64_boost_cpp1.74.0python3.7.____cpython.yaml  linux_64_boost_cpp1.74.0python3.8.____cpython.yaml  linux_64_boost_cpp1.74.0python3.9.____cpython.yaml  linux_64_channel_sourcesconda-forgeconda-forgelabelpython_rcpython3.14.____cp314.yaml  linux_64_channel_sourcesconda-forgepython3.10.____cpython.yaml  linux_64_channel_sourcesconda-forgepython3.11.____cpython.yaml  linux_64_channel_sourcesconda-forgepython3.12.____cpython.yaml  linux_64_channel_sourcesconda-forgepython3.13.____cp313.yaml  linux_64_hdf51.14.3python3.10.____cpython.yaml  linux_64_hdf51.14.3python3.11.____cpython.yaml  linux_64_hdf51.14.3python3.13.____cp313.yaml  linux_64_hdf51.14.3python3.9.____cpython.yaml  linux_64_hdf51.14.4python3.10.____cpython.yaml  linux_64_hdf51.14.4python3.11.____cpython.yaml  linux_64_hdf51.14.4python3.12.____cpython.yaml  linux_64_hdf51.14.4python3.13.____cp313.yaml  linux_64_hdf51.14.4python3.9.____cpython.yaml  linux_64_occt7.6.3__all_python3.10.____cpython.yaml  linux_64_occt7.6.3__all_python3.11.____cpython.yaml  linux_64_occt7.6.3__all_python3.8.____cpython.yaml  linux_64_occt7.6.3__all_python3.9.____cpython.yaml  linux_64_occt7.7.0python3.10.____cpython.yaml  linux_64_occt7.7.0python3.11.____cpython.yaml  linux_64_occt7.7.0python3.8.____cpython.yaml  linux_64_occt7.7.0python3.9.____cpython.yaml  linux_64_occt7.7.1=_all_python3.10.____cpython.yaml  linux_64_occt7.7.1=_all_python3.11.____cpython.yaml  linux_64_occt7.7.1=_all_python3.8.____cpython.yaml  linux_64_occt7.7.1=_all_python3.9.____cpython.yaml  linux_64_occt7.7.1=_novtk_python3.10.____cpython.yaml  linux_64_occt7.7.1=_novtk_python3.11.____cpython.yaml  linux_64_occt7.7.1=_novtk_python3.8.____cpython.yaml  (+331 more)
.github/: CODEOWNERS
.github/workflows/: conda-build.yml
.scripts/: build_steps.sh  run_osx_build.sh  run_win_build.bat
recipe/: README.md  bld.bat  bld_bcf.bat  bld_ifcopenshell.bat  build.sh  build_ifcopenshell.sh  conda_build_config.yaml  meta.yaml  pytest.ini  recipe.yaml  setup.py  update_version_init.py
recipe/config/cmake/: CMakeLists.txt  CMakePresets.json  FindCGAL.cmake  FindEigen3.cmake  FindHDF5.cmake  FindLibXml2.cmake  FindOpenCASCADE.cmake  FindOpenCOLLADA.cmake  FindUSD.cmake  utilities.cmake
recipe/patches/: Update_RocksDB_and_ZSTD_linking_logic.patch  add_hdf5_envvar_unification.patch  cgal_6_aab_traits_removal_ifdef.patch  edit_conda_hdf5_packaging.patch  find_hdf5_fix.patch  fix_IfcLogger_missing_newlines_in_boost_1_86.patch  fix_boost_mt19937_issue.patch  fix_osx_hdf5_conda_package_finding.patch  fix_py310_support.patch  ifcwrap_pythoninterpreter_remove_distutil.patch  ifdef_has_property_def_set_for_xml_serializer.patch  include_hdf5_in_ifc_libs.patch
